--- a/2026-02-04.html
+++ b/2026-02-04.html
@@ -47,8 +47,8 @@
       <h1>🏠 Leilão Tracker</h1>
       <p>Oportunidades imobiliárias em Curitiba e região • 04/02/2026</p>
       <nav>
-        <a href="index.html" class="active">Atual</a>
-        <a href="2026-02-04.html">04/02</a>
+        <a href="index.html">Atual</a>
+        <a href="2026-02-04.html" class="active">04/02</a>
         <a href="2026-02-03.html">03/02</a>
         <a href="2026-02-02.html">02/02</a>
         <a href="2026-02-01.html">01/02</a>
