--- a/2026-02-06.html
+++ b/2026-02-06.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Leilão Tracker - 04/02/2026</title>
+  <title>Leilão Tracker - 06/02/2026</title>
   <style>
     * { box-sizing: border-box; margin: 0; padding: 0; }
     body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif; background: #0d1117; color: #c9d1d9; line-height: 1.6; }
@@ -47,8 +47,8 @@
       <h1>🏠 Leilão Tracker</h1>
       <p>Oportunidades imobiliárias em Curitiba e região • 06/02/2026</p>
       <nav>
-        <a href="index.html" class="active">Atual</a>
-        <a href="2026-02-06.html">06/02</a>
+        <a href="index.html">Atual</a>
+        <a href="2026-02-06.html" class="active">06/02</a>
         <a href="2026-02-04.html">04/02</a>
         <a href="2026-02-03.html">03/02</a>
         <a href="2026-02-02.html">02/02</a>
